# octav-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
Formula/: octav.rb
examples/: test_image.rs
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  types.rs  validation.rs
src/commands/: auth.rs  dashboard.rs  historical.rs  metadata.rs  mod.rs  portfolio.rs  specialized.rs  transactions.rs
src/tui/: app.rs  data.rs  event.rs  fetch.rs  images.rs  mod.rs  theme.rs  ui.rs
src/tui/screens/: holdings.rs  holdings_table.rs  mod.rs  overview.rs  protocols.rs  transactions.rs
tests/: cli_test.rs
