[package]
name = "octav"
version = "0.1.0"
edition = "2021"
description = "CLI tool for the Octav crypto portfolio API"
license = "MIT"
repository = "https://github.com/Octav-Labs/octav-cli"
authors = ["Octav Labs"]
keywords = ["crypto", "portfolio", "cli", "blockchain"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "6"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
